tests/testcases/invalid/semantic/85_chained_postfix_increments.ciel
// Error: multiple chained postfix increments
int main() {
    int x = 1;

    // Error: first (x++) is rvalue, second ++ fails
    // Then third ++ also fails
    (x++)++++;

    return 0;
}
